update the code to obtain the absolute path

--- a/code/drawing_figures.ipynb
+++ b/code/drawing_figures.ipynb
@@ -12,9 +12,10 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## 1. Introduction\n",
+    "## 1. Prelude\n",
     "\n",
     "**Tips:**\n",
+    "+  Locate at the directory path of this notebook in the terminal, such as `cd code`. This is because `os.getcwd()` is used to obtain the absolute path of this notebook instead of `__file__`.\n",
     "+  Restart the kernel for each run to avoid possible wrong localization of directory paths.\n",
     "+  Ensure all the raw data stored in `./data/raw_data_for_empirical_results` before running.\n",
     "+  Remember that all the generated figures (i.e., PDF files) are saved at `./plotting_for_empirical_results`.\n",
@@ -25,7 +26,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -33,7 +34,6 @@
     "\n",
     "# Getting script directory (compatible with interactive environments)\n",
     "script_dir = os.getcwd()\n",
-    "\n",
     "# Building target path (fixing directory hierarchy)\n",
     "parent_dir = os.path.dirname(script_dir)\n",
     "raw_data_path = os.path.join(parent_dir, \"data\", \"raw_data_for_empirical_results\")  # For reading the raw data\n",
