--- a/code/motivational_example.ipynb
+++ b/code/motivational_example.ipynb
@@ -6,7 +6,9 @@
    "source": [
     "# Motivational Example\n",
     "\n",
-    "This notebook is used to run a toy example of `WA-v4` as the motivation of this paper."
+    "This notebook is used to run a toy example of `WA-v4` as the motivation of this paper.\n",
+    "\n",
+    "Note that using `cd code` to change the path at the terminal from `mstcs` to `mstcs/code` due the inclusion of `os.getcwd()` to obtain the absolute path."
    ]
   },
   {
