--- a/mycode/drawing_figures.ipynb
+++ b/mycode/drawing_figures.ipynb
@@ -259,7 +259,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -276,6 +276,7 @@
    "source": [
     "import matplotlib.pyplot as plt\n",
     "import matplotlib.patches as mpatches\n",
+    "from matplotlib.patches import Patch    \n",
     "from matplotlib.legend_handler import HandlerBase\n",
     "\n",
     "# Create legend figure\n",
@@ -333,10 +334,24 @@
     ")\n",
     "\n",
     "# Style adjustments for standard patches\n",
-    "for handle in legend.legend_handles[:3] + [legend.legend_handles[4]]:\n",
-    "    if hasattr(handle, 'set_edgecolor'):\n",
-    "        handle.set_edgecolor('black') # type: ignore\n",
-    "        handle.set_linewidth(0.5) # type: ignore\n",
+    "handle_edgecolor = \"black\"\n",
+    "handle_linewidth = 0.5   \n",
+    "try:\n",
+    "    # Try the old version. \n",
+    "    # In this case, the indexes in `legend` is avoid. The conditional is replaced\n",
+    "    # with the one checking whether `handle` is a Patch.\n",
+    "    for handle in legend.legend_handles:\n",
+    "        if isinstance(handle, Patch):\n",
+    "            handle.set_edgecolor(handle_edgecolor)\n",
+    "            handle.set_linewidth(handle_linewidth)\n",
+    "except Exception:   \n",
+    "    # If the new version fails, then try the old version.\n",
+    "    # However, using indexes in `legend` may not be robust, as the effectiveness\n",
+    "    # may vary with different versions of matplotlib.\n",
+    "    for handle in legend.legend_handles[:3] + [legend.legend_handles[4]]:\n",
+    "        if hasattr(handle, 'set_edgecolor'):\n",
+    "            handle.set_edgecolor(handle_edgecolor) # type: ignore\n",
+    "            handle.set_linewidth(handle_linewidth)   # type: ignore\n",
     "\n",
     "# Save the figure\n",
     "fig_legend.savefig(\n",
