--- a/mycode/drawing_figures.ipynb
+++ b/mycode/drawing_figures.ipynb
@@ -337,8 +337,8 @@
     "handle_edgecolor = \"black\"\n",
     "handle_linewidth = 0.5   \n",
     "try:\n",
-    "    # Try the old version. \n",
-    "    # In this case, the indexes in `legend` is avoid. The conditional is replaced\n",
+    "    # Try the new version. \n",
+    "    # In this case, the indexes in `legend` are avoided. The conditional is replaced\n",
     "    # with the one checking whether `handle` is a Patch.\n",
     "    for handle in legend.legend_handles:\n",
     "        if isinstance(handle, Patch):\n",
